Account API changes + product import supplier name support added

--- a/WMS/Views/Theme/Default/TenantDataImport/Index.cshtml
+++ b/WMS/Views/Theme/Default/TenantDataImport/Index.cshtml
@@ -93,7 +93,7 @@
                 <span class="clearfix" , style="text-align:justify">
                     This should have the columns in the order of Product Code<i style="color:red">*</i>,Manufacturer Code, Description<i style="color:red">*</i>, Description 2,
                     Inventory (values should be like 3.0), Base Unit of Measure (values should be like 4.0),
-                    Buy Price (values should be like 5.0), Sell Price, Preferred Vendor No, Barcode, Outer Barcode, Serialised
+                    Buy Price (values should be like 5.0), Sell Price, Preferred Vendor No (Vendor Id or Name), Barcode, Outer Barcode, Serialised
 
                 </span>
                 <span class="clearfix"><i style="color:red">*</i> These are the mandatory fields </span>
