--- a/WMS/Views/Theme/Default/TenantDataImport/Index.cshtml
+++ b/WMS/Views/Theme/Default/TenantDataImport/Index.cshtml
@@ -56,6 +56,7 @@
             <li><a href="#PI">Products</a></li>
             <li><a href="#PAI">Products Attributes</a></li>
             <li><a href="#PCAI">Products/Categories Associations</a></li>
+            <li><a href="#PPAI">Products Parent/Child Associations</a></li>
         </ul>
         <div id="AI" class="col-md-12 pull-left">
             @Html.Hidden("ImportType", "Accounts")
@@ -105,14 +106,13 @@
                 <h3>Products Attributes Import</h3>
                 <span class="clearfix">The file should be of <i style="color:red">*</i>.csv format. The file should not exceed the maximum size of 1GB. </span>
                 <span class="clearfix" , style="text-align:justify">
-                    This should have the columns in the order of Product SkuCode<i style="color:red">*</i>, Attribute<i style="color:red">*</i>, Attribute Value<i style="color:red">*</i>
+                    This should have the columns in the order of SkuCode<i style="color:red">*</i>, Attribute<i style="color:red">*</i>, Attribute Value<i style="color:red">*</i>
                 </span>
                 <span class="clearfix"><i style="color:red">*</i> These are the mandatory fields </span>
             </div>
         </div>
 
         <div id="PCAI" class="col-md-12 pull-left">
-
             <div class='panel-product-uploads'>
                 <h3>Product/Category Association Imports by Website</h3>
                 <span class="clearfix">The file should be of <i style="color:red">*</i>.csv format. The file should not exceed the maximum size of 1GB. The filename should be in the name of the website</span>
@@ -123,8 +123,18 @@
                 <span class="clearfix"><i style="color:red">*</i> These are the mandatory fields </span>
             </div>
         </div>
-    </div>
 
+        <div id="PPAI" class="col-md-12 pull-left">
+            <div class='panel-product-uploads'>
+                <h3>Products Parent/Child Associations Import</h3>
+                <span class="clearfix">The file should be of <i style="color:red">*</i>.csv format. The file should not exceed the maximum size of 1GB. </span>
+                <span class="clearfix" , style="text-align:justify">
+                    This should have the columns in the order of ParentSkuCode<i style="color:red">*</i>, ChildSkuCode<i style="color:red">*</i>, AssociationType<i style="color:red">*</i>
+                </span>
+                <span class="clearfix"><i style="color:red">*</i> These are the mandatory fields </span>
+            </div>
+        </div>
+    </div>
     <div class="col-md-12 pull-left">
         <div class="data-import-upload-panel">
             @Html.Partial("_ProductPriceFileUpload")
