--- a/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
@@ -9,10 +9,10 @@
     <div class="container">
         @Html.Partial("_ProductDetailBreadCrumb")
         <div class="row">
-            <div class="col-md-5 col-lg-5">
+            <div class="col-md-5 col-lg-4">
                 @Html.Partial("_ProductImagesGallery", Model.Product)
             </div>
-            <div class="col-md-7 col-lg-6 offset-lg-1">
+            <div class="col-md-7 col-lg-8">
                 <div class="nb_prd_det_rightsec">
                     <h2 class="head">@Model.Product.Name</h2>
                     <span class="prd_amnt">@ViewBag.CurrencySymbol@Model.Product.SellPrice</span>
@@ -34,12 +34,9 @@
 
                     @if (Model.ParentProductType != ProductKitTypeEnum.ProductByAttribute)
                     {
-                        foreach (var productAttributeItem in Ganedata.Core.Services.Inventory.GetProductAttributesValueToDisplay(Model.Product.ProductAttributeValuesMap))
-                        {
-                            <div class="attribute-value">
-                                <p>@Html.Raw(productAttributeItem.Key) : <span>@Html.Raw(productAttributeItem.Value)</span></p>
-                            </div>
-                        }
+                        <div class="attribute-value">
+                            <span>@Ganedata.Core.Services.Inventory.GetProductAttributesValueToDisplay(Model.Product.ProductAttributeValuesMap)</span>
+                        </div>
                     }
 
                     @if (Model.ParentProductType == ProductKitTypeEnum.ProductByAttribute)
