--- a/WarehouseEcommerce/Views/Theme/University/Products/_RelatedProducts.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/_RelatedProducts.cshtml
@@ -4,7 +4,7 @@
 @if (Model.Count > 0)
 {
     @Html.Partial("_ProductByAttributeSelectorModal")
-    <section class="nb_sec nb_feat_prod_sec nb_umayalso_sec">
+    <section class="nb_sec nb_feat_prod_sec nb_umayalso_sec feature-product-overflow">
         <div class="container">
             <div class="nb_header_style2">
                 <h3>You may also like</h3>
