--- a/WarehouseEcommerce/Content/Theme/University/app/css/app.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app.css
@@ -1823,10 +1823,14 @@ input[type=number]::-webkit-outer-spin-button {
             content: "\e912";
             font-family: "icomoon" !important;
             position: absolute;
-            right: -4px;
+            right: -10px;
             top: 50%;
             transform: translateY(-50%);
-            font-weight: 100
+            font-size: 10px
+        }
+
+        .nb_filter_accordion .nb_filter_head h5 button:hover{
+            color: gray;
         }
 
 .nb_filter_accordion .nb_filter_body {
@@ -7304,4 +7308,9 @@ html {
     height: 239px;
     min-width: 235px;
     object-fit: scale-down
+}
+
+.img_thumb_sliderwrap .owl-carousel .owl-item img {
+    height: 100%;
+    min-width: 100%;
 }
