--- a/WarehouseEcommerce/Content/Theme/University/app/css/app.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app.css
@@ -1518,7 +1518,6 @@ input[type=number]::-webkit-outer-spin-button {
     .res_navWrapper .nb_res_nav_closeTrigger {
         position: absolute;
         right: 15px;
-        top: 15px;
         font-family: "primaryfont_Normal";
         width: 50px;
         height: 50px;
@@ -1526,7 +1525,8 @@ input[type=number]::-webkit-outer-spin-button {
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 24px
+        font-size: 24px;
+        cursor: pointer
     }
 
     .res_navWrapper .nb_logowrap_res {
