--- a/WarehouseEcommerce/Content/Theme/University/app/css/ui-settings.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/ui-settings.css
@@ -523,6 +523,7 @@ nb_prdpg_fg label,
 .myAccLeftNavsec .tabcontentInner button,
 .myAccLeftNavsec .tabcontentInner .myAccwishlistList > li .myAccwishlistList_inner .cont_right .prd_totLst li .mtcBtn,
 .returnDetls button,
+#nb_res_navTrigger i,
 .nb_header .nb_headicolst li i,
 .nb_header .nb_headicolst li.cartIcoWrap a span,
 .nb_header .nb_mainnav > ul > li > a,
