--- a/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
@@ -15,22 +15,27 @@
             <div class="col-md-7 col-lg-8">
                 <div class="nb_prd_det_rightsec">
                     <h2 class="head">@Model.Product.Name</h2>
-                    <span class="prd_amnt">@ViewBag.CurrencySymbol@Model.Product.SellPrice</span>
-                    <div class="availibility">
-                        @{ var availableProductCount = Ganedata.Core.Services.Inventory.GetAvailableProductCount(Model.Product, ViewBag.SiteId);
-                            ViewBag.AvailableProductCount = availableProductCount;
-                        }
-                        @if (availableProductCount > 0)
-                        {
-                            <span>@((availableProductCount <= 10 ? "only " + availableProductCount.ToString("#") + " items left" : "Available"))</span>
-                        }
-                        else
-                        {
-                            <span>Currently unavailable.</span>
-                        }
+                    <div class="row">
+                        <div class="col-md-12 col-lg-12 col-xl-4">
+                            <span class="prd_amnt">@ViewBag.CurrencySymbol@Model.Product.SellPrice</span>
+                            <div class="availibility">
+                                @{ var availableProductCount = Ganedata.Core.Services.Inventory.GetAvailableProductCount(Model.Product, ViewBag.SiteId);
+                                    ViewBag.AvailableProductCount = availableProductCount;
+                                }
+                                @if (availableProductCount > 0)
+                                {
+                                    <span>@((availableProductCount <= 10 ? "only " + availableProductCount.ToString("#") + " items left" : "Available"))</span>
+                                }
+                                else
+                                {
+                                    <span>Currently unavailable.</span>
+                                }
+                            </div>
+                        </div>
+                        <div class="col-md-12 col-lg-12 col-xl-8">
+                            @Html.Partial("_ProductDetailActionsButtons", Model.Product)
+                        </div>
                     </div>
-
-                    @Html.Partial("_ProductDetailActionsButtons", Model.Product)
 
                     @if (Model.ParentProductType != ProductKitTypeEnum.ProductByAttribute)
                     {
