Order grouped product childs based on availability

--- a/WarehouseEcommerce/Content/Theme/University/app/css/app_responsive.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app_responsive.css
@@ -354,6 +354,10 @@
         bottom: 5px;
     }
 
+    .product-details-section .footSec{
+        max-width: 370px;
+    }
+
     .feature-product-overflow .inside-container {
         margin: 0 22px 0 24px
     }
