--- a/WMS/Views/Theme/Default/TenantDataImport/Index.cshtml
+++ b/WMS/Views/Theme/Default/TenantDataImport/Index.cshtml
@@ -92,9 +92,8 @@
                 <span class="clearfix">The file should be of <i style="color:red">*</i>.csv format. The file should not exceed the maximum size of 1GB. The filename should be in the name of the department</span>
                 <span class="clearfix">For example, all products belonging to specific product department, should be in a csv file named <b>Products.csv</b></span>
                 <span class="clearfix" , style="text-align:justify">
-                    This should have the columns in the order of Product Code<i style="color:red">*</i>,Manufacturer Code, Description<i style="color:red">*</i>, Description 2,
-                    Inventory (values should be like 3.0), Base Unit of Measure (values should be like 4.0),
-                    Buy Price (values should be like 5.0), Sell Price, Preferred Vendor No (Vendor Id or Name), Barcode, Outer Barcode, Serialised
+                    This should have the columns in the order of SkuCode<i style="color:red">*</i>,ManufacturerPartNo, Name<i style="color:red">*</i>, Description,
+                    InventoryLevel(decimal), BuyPrice(decimal), SellPrice(decimal), PreferredSupplier(Vendor Id or Name), BarCode, OuterBarCode, Serialisable(boolean), ProductType
 
                 </span>
                 <span class="clearfix"><i style="color:red">*</i> These are the mandatory fields </span>
