--- a/WarehouseEcommerce/Content/Theme/University/app/css/app.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app.css
@@ -3247,11 +3247,6 @@ body.ZoomerActive {
                     font-size: 16px
                 }
 
-                    #signupPopup .modal-dialog .modal-content .modal-body .loginForm .rememberWrap input[type="checkbox"] {
-                        width: 18px;
-                        height: 18px;
-                    }
-
                     #signupPopup .modal-dialog .modal-content .modal-body .loginForm .rememberWrap .form-check-label {
                         padding-left: 5px;
                     }
@@ -4611,8 +4606,8 @@ input:checked + .slider:before {
     .uni-pages-main .nb_prd_filterwrap .list-group-item input {
         margin-right: 6px;
         margin-top: unset;
-        width: 18px;
-        height: 18px;
+        min-width: 18px;
+        min-height: 18px;
         cursor: pointer;
     }
 
@@ -7342,4 +7337,9 @@ html {
 
 .tab-content > .tab-pane {
     width: 100%
+}
+
+input[type="checkbox"] {
+    min-width: 18px;
+    min-height: 18px;
 }
