--- a/WarehouseEcommerce/Content/Theme/University/app/css/app.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app.css
@@ -2282,7 +2282,7 @@ input[type=number]::-webkit-outer-spin-button {
             font-size: 30px;
             font-family: "primaryfont_Bold";
             color: #f33655;
-            margin-bottom: 16px;
+            margin-bottom: 6px;
             display: block
         }
 
@@ -7132,8 +7132,8 @@ html {
 .product-details-section .footSec {
     display: flex;
     align-items: flex-end;
-    margin-bottom: 15px;
-    max-width: 460px;
+    margin: 15px 0;
+    max-width: 440px;
     float: right;
     position: relative;
 }
