--- a/WMS/Views/Theme/Default/TenantDataImport/Index.cshtml
+++ b/WMS/Views/Theme/Default/TenantDataImport/Index.cshtml
@@ -89,12 +89,11 @@
 
             <div class='panel-product-uploads'>
                 <h3>Product Imports by Department</h3>
-                <span class="clearfix">The file should be of <i style="color:red">*</i>.csv format. The file should not exceed the maximum size of 1GB. The filename should be in the name of the department</span>
-                <span class="clearfix">For example, all products belonging to specific product department, should be in a csv file named <b>Products.csv</b></span>
+                <span class="clearfix">The file should be of <i style="color:red">*</i>.csv format. The file should not exceed the maximum size of 1GB.</span>
                 <span class="clearfix" , style="text-align:justify">
                     This should have the columns in the order of SkuCode<i style="color:red">*</i>,ManufacturerPartNo, Name<i style="color:red">*</i>, Description,
-                    InventoryLevel(decimal), BuyPrice(decimal), SellPrice(decimal), PreferredSupplier(Vendor Id or Name), BarCode, OuterBarCode, Serialisable(boolean), ProductType
-
+                    InventoryLevel(decimal), BuyPrice(decimal), SellPrice(decimal), PreferredSupplier(Vendor Id or Name), BarCode, OuterBarCode, Serialisable(boolean), TaxId(int?), UnitOfMeasurementId(int?), ProductType,
+                    Department, Group, WeightGroup
                 </span>
                 <span class="clearfix"><i style="color:red">*</i> These are the mandatory fields </span>
             </div>
