--- a/WMS/Views/Theme/Default/TenantDataImport/Index.cshtml
+++ b/WMS/Views/Theme/Default/TenantDataImport/Index.cshtml
@@ -116,9 +116,10 @@
                 <span class="clearfix">The file should be of <i style="color:red">*</i>.csv format. The file should not exceed the maximum size of 1GB. The filename should be in the name of the website</span>
                 <span class="clearfix">For example, all accociations belonging to specific website products and categories, should be in a csv file named <b>WebsiteName.csv</b></span>
                 <span class="clearfix" , style="text-align:justify">
-                    This should have the columns in the order of ParentHeading<i style="color:red">*</i>, ChildHeading, SubChildHeading, SkuCode<i style="color:red">*</i>
+                    This should have the columns in the order of ParentHeading, ChildHeading, SubChildHeading, SkuCode<i style="color:red">*</i>
                 </span>
                 <span class="clearfix"><i style="color:red">*</i> These are the mandatory fields </span>
+                <span class="clearfix">The rows with the empty value for "ParentHeading", "ChildHeading" and "SubChildHeading", will be just associated by website and not any categories.</span>
             </div>
         </div>
 
